--- a/src/themes/dark.scss
+++ b/src/themes/dark.scss
@@ -485,12 +485,7 @@ $panelInsetBackground: "#252526";
     text-align: left;
 }
 
-#experience div span:first-child {
-    width: 74px;
-}
-
 #experience div span:nth-child(2) {
-    text-align: right;
     padding-right: 2px;
 }
 
