--- a/src/themes/default.scss
+++ b/src/themes/default.scss
@@ -506,12 +506,7 @@ body {
     text-align: left;
 }
 
-#experience div span:first-child {
-    width: 74px;
-}
-
 #experience div span:nth-child(2) {
-    text-align: right;
     padding-right: 2px;
 }
 
