--- a/src/themes/lightgray.scss
+++ b/src/themes/lightgray.scss
@@ -489,12 +489,7 @@ $panelInsetBackground: "rgb(240, 240, 240)";
     text-align: left;
 }
 
-#experience div span:first-child {
-    width: 74px;
-}
-
 #experience div span:nth-child(2) {
-    text-align: right;
     padding-right: 2px;
 }
 
